# pokemon_term

./: .gitignore  Cargo.toml  README.md  build.rs
bench/: bench.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  flags.rs  help.rs  main.rs  parse.rs  pokemon.rs  util.rs  version.rs
